# cpp

./: .clang-format  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  QUICKSTART.md  QUICK_COMPARE.md  QUICK_START.md  README.md  docker-compose.yml  install.sh  results.txt
.github/workflows/: build.yml
.trunk/: trunk.yaml
python/: db_manager.py  requirements.txt  run.py  test_run.py  view_results.py
sql/: init.sql
src/: main.cpp
src/asio_server/: server.cpp
src/benchmark/: benchmark_utils.cpp  benchmark_utils.hpp
src/bindings/: bindings.cpp
src/core/: benchmark_kit.hpp  benchmark_runner.hpp  statistics.hpp  timer.hpp
src/db/: postgres_client.hpp
src/examples/sorting/: sorting_benchmark.cpp
src/examples/vector_erase/: vector_erase.cpp
src/examples/weak_ptr/: custom_weak_ptr.hpp
src/server/: server.cpp
src/task1_weak_ptr/: custom_weak_ptr.cpp  custom_weak_ptr.hpp
src/task2_vector_erase/: vector_erase.cpp  vector_erase.hpp
src/task3_mapping/: container_benchmark.cpp  container_benchmark.hpp
tests/: CMakeLists.txt  test_task1.cpp  test_task2.cpp  test_task3.cpp
